// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Emoji 1`] = `
<button
  style="border: 1px solid #eee; border-radius: 3; background-color: rgb(255, 255, 255); cursor: pointer; padding: 3px 10px; color: rgb(85, 213, 138);"
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button Text 1`] = `
<button
  style="border: 1px solid #eee; border-radius: 3; background-color: rgb(255, 255, 255); cursor: pointer; padding: 3px 10px; color: rgb(85, 213, 138);"
>
  Hello Button
</button>
`;

exports[`Storyshots Special Button Special 1`] = `
<button
  class="special-button test"
  type="button"
>
  Special Button
</button>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<div
  style="line-height: 1.4; font-family: \\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif; background-color: rgb(255, 255, 255);"
>
  <h1>
    Welcome to STORYBOOK
  </h1>
   
  <p>
    
        This is a UI component dev environment for your app.
      
  </p>
   
  <p>
    
        We've added some basic stories inside the
        
    <br />
     
    <code
      style="font-weight: 600; padding: 2px 5px; border: 1px solid #eae9e9; border-radius: 4; background-color: rgb(243, 242, 242); color: rgb(58, 58, 58);"
    >
      src/stories
    </code>
     
    <br />
    
        directory.
        
    <br />
    
        A story is a single state of one or more UI components. You can have as many stories as
        you want.
        
    <br />
    
        (Basically a story is like a visual test case.)
      
  </p>
   
  <p>
    
        See these sample
        
    <br />
     
    <a
      role="button"
      style="color: rgb(20, 116, 243); text-decoration: none; border-bottom: 1px solid #1474f3;"
      tabindex="0"
    >
      stories
    </a>
     
    <br />
    
        for a component called
        
    <br />
     
    <code
      style="font-weight: 600; padding: 2px 5px; border: 1px solid #eae9e9; border-radius: 4; background-color: rgb(243, 242, 242); color: rgb(58, 58, 58);"
    >
      Button
    </code>
    
        .
      
  </p>
   
  <p>
    
        Just like that, you can add your own components as stories.
        
    <br />
    
        You can also edit those components and see changes right away.
        
    <br />
    
        (Try editing the 
    <code
      style="font-weight: 600; padding: 2px 5px; border: 1px solid #eae9e9; border-radius: 4; background-color: rgb(243, 242, 242); color: rgb(58, 58, 58);"
    >
      Button
    </code>
     component
        located at 
    <code
      style="font-weight: 600; padding: 2px 5px; border: 1px solid #eae9e9; border-radius: 4; background-color: rgb(243, 242, 242); color: rgb(58, 58, 58);"
    >
      src/stories/Button.js
    </code>
    .)
      
  </p>
   
  <p>
    
        This is just one thing you can do with Storybook.
        
    <br />
    
        Have a look at the
        
    <br />
     
    <a
      href="https://github.com/storybookjs/storybook"
      rel="noopener noreferrer"
      style="color: rgb(20, 116, 243); text-decoration: none; border-bottom: 1px solid #1474f3;"
      target="_blank"
    >
      
          Storybook
        
    </a>
     
    <br />
    
        repo for more information.
      
  </p>
   
  <p
    style="opacity: 0.5;"
  >
    <b>
      NOTE:
    </b>
     
    <br />
    
        Have a look at the
        
    <br />
     
    <code
      style="font-weight: 600; padding: 2px 5px; border: 1px solid #eae9e9; border-radius: 4; background-color: rgb(243, 242, 242); color: rgb(58, 58, 58);"
    >
      .storybook/webpack.config.js
    </code>
     
    <br />
    
        to add webpack
        loaders and plugins you are using in this project.
      
  </p>
</div>
`;
